{
    "name": "UIInputAction",
    "maps": [
        {
            "name": "UIActionMap",
            "id": "cf0d8730-5555-4567-be4d-6fe53b6ba88c",
            "actions": [
                {
                    "name": "ShowMouseCursor",
                    "type": "Button",
                    "id": "8b3d2bc0-c67c-43ac-9a23-800f3861e310",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "be8c5ca4-3153-4b6a-9d01-01a9bedae330",
                    "path": "<Keyboard>/alt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowMouseCursor",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}